# Maimai-sync-public

./: .gitignore  DEPLOY.md  README.md  deploy.sh  pyproject.toml
maimai_sync/: __init__.py  __main__.py  config.py  lxns.py  models.py
maimai_sync/account/: __init__.py  auth.py  manager.py
maimai_sync/db/: __init__.py  crud.py  engine.py  models.py
maimai_sync/downloader/: __init__.py  divingfish.py
maimai_sync/storage/: __init__.py  db_store.py  json_store.py
maimai_sync/uploader/: __init__.py  divingfish.py
maimai_sync/utils/: __init__.py  score_merge.py
maimai_sync/web/: __init__.py  admin_app.py  app.py
maimai_sync/web/static/: index.html
